# optuclust

./: .gitignore  CITATION.cff  README.md  benchmark.py  example-dbscan.py  example-gridsearch.py  example-storage+resume.py  example-timeout.py  example_timeout.py  exmple-loop.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-pip.yml
data/: hdbscan.csv  painted-10sparse.csv  painted-blob.csv  painted-star.csv  painted1.csv  painted2.csv  painted3.csv
optuclust/: __init__.py  optuclust.py
tests/: test_optuclust.py
