[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optuclust"
version = "0.0.2"
description = "Hyperparameter optimization for multiple clustering algorithms using Optuna, with Scikit-learn API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Filip S.", email = "filip.ursynow@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.2",
    "scipy>=1.7",
    "hdbscan>=0.8.29",
    "optuna>=3.0",
    "kmedoids>=0.3.0",
    "matplotlib>=3.4",
    "pandas>=1.3",
    "sklearn-som",
]

[project.urls]
Homepage = "https://github.com/filipsPL/optuclust"

[tool.setuptools.packages.find]
include = ["optuclust*"]
